[gd_scene load_steps=8 format=2]

[ext_resource path="res://start_menu/startbutton.png" type="Texture" id=1]
[ext_resource path="res://start_menu/flappybirdbanner.png" type="Texture" id=2]
[ext_resource path="res://start_menu/start_menu.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.352941, 0.372549, 0.85098, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 70 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 140.0
margin_top = 100.0
margin_right = 180.0
margin_bottom = 114.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 20, 7 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 1 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
